[UI] Fix text wrapping for non-alphabetic scripts (#4813)

--- a/src/frontend/components/UI/SelectField/index.css
+++ b/src/frontend/components/UI/SelectField/index.css
@@ -51,6 +51,7 @@
 .selectStyle {
   text-indent: 22px;
   padding-inline-end: 4rem;
+  white-space: nowrap;
 }
 
 .selectFieldWrapper.isRTL .MuiOutlinedInput-root {
